fixed on mobile

--- a/src/styles/blocks/_b-home.scss
+++ b/src/styles/blocks/_b-home.scss
@@ -10,6 +10,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	-webkit-overflow-scrolling: touch;
 
 	&__wrapper {
 		padding: $header-height-mobile $container-padding/2 0 $container-padding/4;
@@ -27,6 +28,7 @@
 		justify-content: space-between;
 
 		&:hover {
+			@include media-breakpoint-up(md) {
 			.b-home__title-item {
 				&:first-child {
 					margin: 0
@@ -37,12 +39,13 @@
 				}
 			}
 		}
+		}
 
 		&-item {
 			font-size: $font-size-xxl;
 
 			&:first-child {
-				margin-left: calc(100% - #{$container-padding*.75});
+				//margin-left: calc(100% - #{$container-padding*.75});
 				transition: margin $transition-time-1 $transition-easing-1;
 
 				@include media-breakpoint-up(md) {
@@ -51,9 +54,11 @@
 			}
 
 			&:last-child {
+				@include media-breakpoint-up(md) {
 				opacity: 0;
 				transition: opacity $transition-time-1 $transition-easing-1;
 			}
+		}
 		}
 	}
 
