--- a/src/styles/blocks/_b-overview.scss
+++ b/src/styles/blocks/_b-overview.scss
@@ -9,6 +9,7 @@
 	flex-flow: column nowrap;
 	justify-content: flex-end;
 	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;
 
 	&__wrapper {
 		@include make-row();
