--- a/src/styles/components/_c-form.scss
+++ b/src/styles/components/_c-form.scss
@@ -57,6 +57,7 @@
 
 	&__input{
 		border: none;
+		border-radius: 0;
 		border-bottom: 1px solid $black;
 		margin-bottom: $container-padding/4;
 	}
