--- a/src/styles/layouts/_l-footer.scss
+++ b/src/styles/layouts/_l-footer.scss
@@ -12,6 +12,7 @@
 		@include make-col(12);
 		display: flex;
 		width: 100%;
+		height: 100%;
 		flex-direction: column;
 		background-color: $black;
 		padding: $container-padding $container-padding/2;
@@ -108,6 +109,11 @@
 			font-family: $font-head;
 			line-height: 1.5;
 			padding: 0 $container-padding/8;
+			cursor: pointer;
+
+			&:hover {
+				opacity: .8
+			}
 
 			@include media-breakpoint-up(md) {
 				font-size: $font-size-lg;
